# 32.5-

./: Задача 1. Информация о фильме с кинопортала.json
Задача 2. Анализ данных о фильмах/: CMakeLists.txt  belskiyNik.cpp  belskiyNik.h  movies.json
